test_suite/tests/ui/enum-representation/partially_tagged_wrong_order.rs
use serde_derive::Serialize;

#[derive(Serialize)]
enum E {
    #[serde(untagged)]
    A(u8),
    B(String),
}

fn main() {}
